// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden — africa-sudan-india (최소형) > 구조 다이제스트 스냅샷 1`] = `
{
  "entities": [
    {
      "borders": true,
      "display": "아프리카",
      "fill": "#E6E1C9",
      "key": "group:africa",
      "role": "group",
      "z": 0,
    },
    {
      "borders": true,
      "display": "수단",
      "fill": "#cce6af",
      "key": "729",
      "role": "plain",
      "z": 1001,
    },
    {
      "borders": true,
      "display": "인도",
      "fill": "#F3C3A6",
      "key": "356",
      "role": "plain",
      "z": 1002,
    },
  ],
  "labels": [
    "아프리카",
    "수단",
    "인도",
  ],
  "links": [
    {
      "anchor": "border",
      "from": "729",
      "geodesic": false,
      "to": "356",
    },
  ],
  "projection": {
    "rotate": [
      -0,
      0,
    ],
    "type": "equirectangular",
  },
  "svgChecksum": "f038f23f",
  "viewBox": [
    0,
    0,
    960,
    576,
  ],
}
`;

exports[`golden — trade-winds (좌우 배치) > 구조 다이제스트 스냅샷 1`] = `
{
  "entities": [
    {
      "borders": true,
      "display": "아프리카",
      "fill": "#E6E1C9",
      "key": "group:africa",
      "role": "group",
      "z": 0,
    },
    {
      "borders": true,
      "display": "동남아시아",
      "fill": "#899CA5",
      "key": "group:southeast-asia",
      "role": "group",
      "z": 1,
    },
    {
      "borders": true,
      "display": "아메리카",
      "fill": "#C17D5B",
      "key": "group:americas",
      "role": "group",
      "z": 2,
    },
  ],
  "labels": [
    "아프리카",
    "동남아시아",
    "아메리카",
  ],
  "links": [],
  "projection": {
    "rotate": [
      -180,
      0,
    ],
    "type": "equirectangular",
  },
  "svgChecksum": "c71b3c66",
  "viewBox": [
    0,
    0,
    960,
    576,
  ],
}
`;

exports[`golden — 명시형 + geodesic > 구조 다이제스트 스냅샷 1`] = `
{
  "entities": [
    {
      "borders": true,
      "display": "아시아",
      "fill": "#d98a3a",
      "key": "group:asia",
      "role": "group",
      "z": 0,
    },
    {
      "borders": true,
      "display": "한국",
      "fill": "#e1604f",
      "key": "410",
      "role": "focus",
      "z": 1001,
    },
    {
      "borders": true,
      "display": "인도",
      "fill": "#e1604f",
      "key": "356",
      "role": "focus",
      "z": 1002,
    },
  ],
  "labels": [
    "아시아",
    "한국",
    "인도",
  ],
  "links": [
    {
      "anchor": "border",
      "from": "410",
      "geodesic": true,
      "to": "356",
    },
  ],
  "projection": {
    "rotate": [
      -60,
      0,
    ],
    "type": "equirectangular",
  },
  "svgChecksum": "2465d2d6",
  "viewBox": [
    0,
    0,
    960,
    576,
  ],
}
`;
